data/derived/comb/progs/unify/prog8038.ml.out
Characters 160-161:
  |Average(e1,e2)->buildAverage(x, y)
                                ^
Error: This expression has type float but an expression was expected of type
         expr
